--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "username": "https://Divyansh-Kumawat.github.io/word_counter_react",
+  "username": "https://Divyansh-Kumawat.github.io/count_react",
   "name": "divyansh",
   "version": "0.1.0",
   "private": true,
